[gd_scene load_steps=16 format=2]

[ext_resource path="res://assets/enemy_saucer.png" type="Texture" id=1]
[ext_resource path="res://enemy/EnemyPaths.tscn" type="PackedScene" id=2]
[ext_resource path="res://explosion/Explotion.tscn" type="PackedScene" id=3]
[ext_resource path="res://enemy/Enemy.gd" type="Script" id=4]
[ext_resource path="res://bullet/EnemyBullet.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/sounds/synthetic_thunder_short.wav" type="AudioStream" id=6]
[ext_resource path="res://assets/sounds/enemy_laser.wav" type="AudioStream" id=7]
[ext_resource path="res://assets/corona.png" type="Texture" id=8]

[sub_resource type="CircleShape2D" id=1]
radius = 35.8331

[sub_resource type="Animation" id=2]
resource_name = "flash"
length = 0.25
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.04, 0.08, 0.12, 0.16, 0.2, 0.24 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
length = 3.0
loop = true
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 360, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 3 )
}

[sub_resource type="CanvasItemMaterial" id=5]
blend_mode = 1

[sub_resource type="Curve" id=6]
_data = [ Vector2( 0.0123318, 0.325812 ), 0.0, 0.0, 0, 0, Vector2( 0.971973, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=7]
curve = SubResource( 6 )

[sub_resource type="ParticlesMaterial" id=4]
emission_shape = 2
emission_box_extents = Vector3( 25, 25, 1 )
flag_disable_z = true
spread = 25.0
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale_curve = SubResource( 7 )

[node name="Enemy" type="Area2D" groups=["enemies"]]
pause_mode = 1
script = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}
Bullet = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Sprite")
autoplay = "rotate"
anims/flash = SubResource( 2 )
anims/rotate = SubResource( 3 )

[node name="EnemyPaths" parent="." instance=ExtResource( 2 )]

[node name="Explosion" parent="." instance=ExtResource( 3 )]

[node name="GunTimer" type="Timer" parent="."]
wait_time = 1.5
autostart = true

[node name="ExplodeSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="ShootSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="Particles2D" type="Particles2D" parent="."]
show_behind_parent = true
material = SubResource( 5 )
amount = 20
local_coords = false
process_material = SubResource( 4 )
texture = ExtResource( 8 )

[connection signal="body_entered" from="." to="." method="_on_Enemy_body_entered"]
[connection signal="animation_finished" from="Explosion/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="GunTimer" to="." method="_on_GunTimer_timeout"]

[editable path="Explosion"]
